# ESP32_Receiver

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/app/: page.tsx
frontend/src/: App.css  App.tsx  index.css  index.tsx  main.tsx
frontend/src/components/: GatesPanel.tsx  IMUBall.tsx  RPMGauge.tsx  TelemetryChart.tsx  TelemetryPanel.tsx  theme-toggle.tsx
frontend/src/lib/: telemetry.ts  types.ts
main/: CMakeLists.txt  ESP32_Receiver.c  ESP32_Receiver.h  hash.c  hash.h  server.c  server.h
